--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                             <div class="face face1 align-center text-center">
                                 <div class="content">
                                     <img
-                                        src="/Assets/Images/create.png">
+                                        src="./Assets/Images/create.png">
                                     <h3>Create</h3>
                                     <h5>Start Farm Accounting With One Click</h5>
                                 </div>
@@ -125,7 +125,7 @@
                             <div class="face face1 align-center text-center">
                                 <div class="content">
                                     <img
-                                        src="/Assets/Images/Record.png">
+                                        src="./Assets/Images/Record.png">
                                     <h3>Record</h3>
                                     <h5>Separate Account For Each Crop In The Farm</h5>
                                 </div>
@@ -142,7 +142,7 @@
                             <div class="face face1 align-center text-center">
                                 <div class="content">
                                     <img
-                                        src="/Assets/Images/Customize.png">
+                                        src="./Assets/Images/Customize.png">
                                     <h3>Customize</h3>
                                     <h5>Easy To Create Category For Every Farming Expense And Income</h5>
                                 </div>
@@ -159,7 +159,7 @@
                             <div class="face face1 align-center text-center">
                                 <div class="content">
                                     <img
-                                        src="/Assets/Images/Track.png">
+                                        src="./Assets/Images/Track.png">
                                     <h3>Track</h3>
                                     <h5>Keep Track Of money Spent On Each Crop</h5>
                                 </div>
@@ -177,7 +177,7 @@
                             <div class="face face1 align-center text-center">
                                 <div class="content">
                                     <img
-                                        src="/Assets/Images/Report.png">
+                                        src="./Assets/Images/Report.png">
                                     <h3>Report</h3>
                                     <h5>Take Decisions On Which Crops Give More Return</h5>
                                 </div>
@@ -194,7 +194,7 @@
                             <div class="face face1 align-center text-center">
                                 <div class="content">
                                     <img
-                                        src="/Assets/Images/Analyse.png">
+                                        src="./Assets/Images/Analyse.png">
                                     <h3>Analyse</h3>
                                     <h5>Decide Which Crop Is Profitable For You</h5>
                                 </div>
@@ -211,7 +211,7 @@
                             <div class="face face1 align-center text-center">
                                 <div class="content">
                                     <img
-                                        src="/Assets/Images/secure.png">
+                                        src=".s/Assets/Images/secure.png">
                                     <h3>Secure</h3>
                                     <h5>Farm Accounting In Your Pocket</h5>
                                 </div>
@@ -248,7 +248,7 @@
                                 </ul>
                             </div>
                             <div class="col-md-4 item text">
-                                <img src="/Assets/Images/Logo-large.png" alt="logo">
+                                <img src="./Assets/Images/Logo-large.png" alt="logo">
                                 <p>Manage Your farming Business and Accounting/ledger by single click on mobile</p>
                             </div>
                             <div class="col item social"><a href="#"><i class="fab fa-facebook"></i></a><a href="#"><i
