--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                             <div class="face face1 align-center text-center">
                                 <div class="content">
                                     <img
-                                        src=".s/Assets/Images/secure.png">
+                                        src="./Assets/Images/secure.png">
                                     <h3>Secure</h3>
                                     <h5>Farm Accounting In Your Pocket</h5>
                                 </div>
